syntax = "proto3";

package api.twit.v1;

import "google/protobuf/timestamp.proto";

option go_package = "ank/back-template/api/twit/v1;pb";

service TwitAPI{
  rpc TwitPost(TwitPostRequest) returns (TwitPostResponse){

  }
  rpc TwitGet(TwitGetRequest) returns (TwitGetResponse){

  }
  rpc TwitUpdate(TwitUpdateRequest) returns (TwitUpdateResponse){

  }
  rpc TwitDelete(TwitDeleteRequest) returns (TwitDeleteResponse){

  }
}

message Twit{
  string id = 1;
  string author_id = 2;
  string text = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message TwitPostRequest{
  string text = 1;
}

message TwitPostResponse{
  Twit twit = 1;
}

message TwitGetRequest{
  string id = 1;
}

message TwitGetResponse{
  Twit twit = 1;
}

message TwitUpdateRequest{
  string id = 1;
  string text = 2;
}

message TwitUpdateResponse{
  Twit twit = 1;
}

message TwitDeleteRequest{
  string id = 1;
}

message TwitDeleteResponse{}



